# ICP

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  gui.ui  main.cpp  run_tests.cpp  ui_gui.h
examples/: example1.json  example2.json
saved/: kek.json  lulz.json  new.json
src/: runApp.cpp  run_app.cpp
src/controllers/: controller.cpp  controller.hpp  robot_controller.cpp  robot_controller.h  robot_controller.hpp
src/gui/: areaWidget.cpp  areaWidget.hpp  area_widget.cpp  area_widget.hpp  gui.cpp  gui.h  gui.hpp  menuBar.cpp  menuBar.hpp  menu_bar.cpp  menu_bar.hpp  robotOverviewWidget.cpp  robotOverviewWidget.hpp  robot_view_widget.cpp  robot_view_widget.h  select_widget.cpp  select_widget.hpp  sideBar.cpp  sideBar.hpp  sidebar.cpp  sidebar.hpp  simulationControlWidget.cpp  simulationControlWidget.hpp  top_tool_bar.cpp  top_tool_bar.hpp
src/models/: automaticRobot.cpp  automaticRobot.hpp  entity.cpp  entity.hpp  manualRobot.cpp  manualRobot.hpp  robot.cpp  robot.h  robot.hpp  robotBase.cpp  robotBase.hpp  wall.cpp  wall.h  wall.hpp
src/services/: loader.cpp  loader.hpp  saver.cpp  saver.hpp
src/utilities/: manualRobotStateEnum.hpp  robotRotationDirectionEnum.hpp  vector2d.cpp  vector2d.hpp  wallEdgeEnum.hpp
tests/: CMakeLists.txt  collision_tests.cpp  collision_tests.h  robot_controller_tests.cpp  robot_controller_tests.h  run_tests.cpp  simple_robot_tests.cpp  simple_robot_tests.h  test1.cpp  wall_tests.cpp  wall_tests.h
